--- a/views/articles/form_field.ejs
+++ b/views/articles/form_field.ejs
@@ -1,15 +1,15 @@
 <div class="form-group">
   <label for="title">Title</label>
-  <input required type="text" name="title" class="form-control" />
+  <input required value="<%=article.title%>" type="text" name="title" class="form-control" />
 </div>
 <div class="form-group">
   <label for="description">Description</label>
-  <textarea required name="description" id="description" class="form-control"></textarea>
+  <textarea required name="description" id="description" class="form-control"><%=article.description%></textarea>
 </div>
 <div class="form-group">
     <label for="title">Markdown</label>
-    <textarea name ="markdown" id ="markdown" class="form-control" ></textarea>
+    <textarea required name ="markdown" id ="markdown" class="form-control" ><%=article.markdown%></textarea>
 </div>
-<br
+<br>
 <a href="/" class="btn btn-seconadry">Cancel</a>
 <button type="submit" class="btn btn-primary">Save</button>
