--- a/views/articles/form_field.ejs
+++ b/views/articles/form_field.ejs
@@ -11,5 +11,5 @@
     <textarea required name ="markdown" id ="markdown" class="form-control" ><%=article.markdown%></textarea>
 </div>
 <br>
-<a href="/" class="btn btn-seconadry">Cancel</a>
+<a href="/" class="btn btn-danger">Cancel</a>
 <button type="submit" class="btn btn-primary">Save</button>
