--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -3,36 +3,101 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Blog website</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Blog Website</title>
   </head>
+
   <body>
-    <nav class="navbar bg-primary" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"> Blog Website </a>
-      </div>
-    </nav>
     <div class="container">
-      <h2 class="mb-4 mt-4 text-center">Welcome to my Blog Website</h2>
-      <a href="/articles/new" class="btn btn-success">Create Article</a>
+      <h1 class="mb-4">Blog Website</h1>
+      <a href="/articles/new" class="btn btn-success">Create New Article </a>
 
-      <% articles.forEach(article =>{%>
-
+      <% articles.forEach(article=>{%>
       <div class="card mt-4">
         <div class="card-body">
-          <h4 class="card-title"><%= article.titles%></h4>
+          <h4 class="card-title"><%=article.title%></h4>
           <div class="card-subtitle text-muted mb-2">
-            <%= article.createdAt.toLocaleDateString()%>
+            <%=article.createdAt.toLocaleDateString() %>
           </div>
           <div class="card-text mb-2"><%=article.description%></div>
+          <a href="articles/<%=article.slug%>" class="btn btn-primary"
+            >Read More</a
+          >
+          <a href="articles/edit/<%= article.id%>" class="btn btn-info"
+            >Edit
+          </a>
+          <form
+            action="/articles/<%=article.id %>?_method=DELETE"
+            method="POST"
+            class="d-inline"
+          >
+            <button type="submit" class="btn btn-danger">Delete</button>
+          </form>
         </div>
       </div>
+
       <%})%>
     </div>
+    <style>
+      /* General Styles */
+      body {
+        font-family: "Montserrat", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        background-image: url("https://i.pinimg.com/originals/b1/6d/90/b16d909fa4fbf4f57c549e8a956ae81c.jpg");
+        margin: 0;
+        padding: 0;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 100%;
+      }
+
+      .container {
+        width: 90%;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+      }
+
+      header {
+        text-align: center;
+        margin: 5%;
+      }
+
+      .card {
+        background: #f6f5f2;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+        padding: 20px;
+      }
+
+      .btn {
+        border: none;
+        border-radius: 5px;
+        padding: 8px 15px;
+        cursor: pointer;
+        font-size: 0.8rem;
+      }
+
+      .btn-success {
+        font-size: 1rem;
+      }
+    </style>
   </body>
 </html>
