--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -4,24 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Blog website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Blog Website</title>
   </head>
   <body>
-    <div class="container">
-     <h1 class="mb-1"><%=article.title%></h1>   
-     <div class="text-muted mb-2">
-        <%=article.createdAt.toLocalDateString()%>
-     </div>
-     <a href="/" class="btn btn-secondary">All Articles</a>
-     <a href="/articles/edit/<%=article.id %>" class="btn btn-info">Edit</a>
-     <div>
-        <%=article.markdown %>
-     </div>
+    <div class="container my-5">
+      <h1 class="mb-1"><%=article.title%></h1>
+      <div class="text-muted mb-3">
+        <%=article.createdAt.toLocaleDateString() %>
+      </div>
+      <div class="mb-4">
+        <a href="/" class="btn btn-secondary me-2"> All Articles</a>
+        <a href="/articles/edit/<%= article.id %>" class="btn btn-info">
+          Edit</a
+        >
+      </div>
+      <div><%- article.sanitizedHTML %></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
   </body>
+  <style>
+    body {
+      font-family: "Montserrat", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 400;
+      font-style: normal;
+      background-image: url("https://i.pinimg.com/originals/b1/6d/90/b16d909fa4fbf4f57c549e8a956ae81c.jpg");
+      margin: 0;
+      padding: 0;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+    }
+    .container {
+      background-color: #f6f5f2;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      max-width: 1100px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </html>
